# ria-coder

./: Cargo.toml  README.md  broken.rs
assets/themes/: default.toml
crates/agent/: Cargo.toml
crates/agent/src/: broken_test.rs  context.rs  execution.rs  history.rs  lib.rs  llm.rs  orchestrator.rs  planning.rs  plugins.rs  state.rs  task.rs  verification.rs
crates/agent/src/llm/: mod.rs  riallm.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: build.rs  filesystem.rs  git.rs  lib.rs  lint.rs  process.rs  registry.rs  search.rs  test.rs  watcher.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  keybindings.rs  lib.rs  syntax.rs  theme.rs
crates/tui/src/input/: mod.rs
crates/tui/src/panels/: agent_status.rs  chat.rs  diff.rs  file_browser.rs  file_preview.rs  git_status.rs  mod.rs  output_log.rs
