[workspace]
members = [
    "crates/tui",
    "crates/agent",
    "crates/tools",
    "crates/config",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "DOSL-IIE-1.0"
repository = "https://github.com/riallm/ria-coder"
description = "Ria Coder - Terminal-based agentic coding system written in Rust"

[workspace.dependencies]
# Internal crates
ria-tui = { path = "crates/tui" }
ria-agent = { path = "crates/agent" }
ria-tools = { path = "crates/tools" }
ria-config = { path = "crates/config" }
ria-cli = { path = "crates/cli" }

# RIA Platform
ria-gguf = { path = "../ria-platform/crates/gguf" }
ria-core = { path = "../ria-platform/crates/core" }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tree-sitter = "0.22"
syntect = { version = "5.0", default-features = false, features = ["default-fancy"] }

# Async / Runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }
reedline = "0.36"

# Git
gix = { version = "0.67", features = ["max-performance"] }

# File watching
notify = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
strum = { version = "0.26", features = ["derive"] }
ignore = "0.4"
walkdir = "2.0"
