[package]
name = "ria-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent orchestration for Ria Coder"

[dependencies]
ria-tools.workspace = true
ria-config.workspace = true
ria-gguf.workspace = true
ria-inference-core.workspace = true
ria-core.workspace = true
riallm.workspace = true
ria-tokenizer.workspace = true
candle-core = "0.8"
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
walkdir.workspace = true
async-trait = "0.1"
