[package]
name = "ria-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration management for Ria Coder"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
directories.workspace = true
